discussion/kv_engine/185020/185020_rev8_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-54729: CDC stream backfill with a dropped collection

Primarily add a test that includes a dropped collection in the
scanned history range. This highlighted a problem in the collections
ScanContext as with history enabled the scanAllVersions method will
return both the create and drop of a collection as separate system
events. The isLogicallyDeleted code now needs to be able to distinguish
the create and drop collection events so that a backfill can exclude
the create event if the collection is dropped.

Change-Id: Icd78e81e9106d7c7014e9e7caecf89a948960d24

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2023-01-17 16:24:54.000000000
Message: 
Uploaded patch set 8: New patch set was added with same tree, parent, and commit message as Patch Set 7.
----------------------------------------------------------------------------------------------------------------------
Author: Restriction Checker
Date: 2023-01-17 16:25:16.000000000
Message: 
Patch Set 8: Well-Formed+1

Permission granted to commit: 

https://server.jenkins.couchbase.com/job/restricted-branch-check/332909/artifact/restricted.html : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2023-01-17 17:07:16.000000000
Message: 
Patch Set 8: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/857/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:1821:49: error: no member named "Mode" in "magma::Magma::SeqIterator" [clang-diagnostic-error]
    return scan(ctx, magma::Magma::SeqIterator::Mode::Snapshot);
                                                ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:1825:49: error: no member named "Mode" in "magma::Magma::SeqIterator" [clang-diagnostic-error]
    return scan(ctx, magma::Magma::SeqIterator::Mode::History);
                                                ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:1829:60: error: no type named "Mode" in "magma::Magma::SeqIterator" [clang-diagnostic-error]
                                magma::Magma::SeqIterator::Mode mode) const {
                                                           ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:2890:18: error: no member named "RangeNotFound" in "magma::Status" [clang-diagnostic-error]
    case Status::RangeNotFound:
                 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.h:774:50: error: no type named "Mode" in "magma::Magma::SeqIterator" [clang-diagnostic-error]
                      magma::Magma::SeqIterator::Mode mode) const;
                                                 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-memory-tracking-proxy.h:53:30: error: unknown type name "Mode" [clang-diagnostic-error]
                             Mode mode) override;
                             ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/857/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:1821:49:
error: no member named "Mode" in "magma::Magma::SeqIterator" [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/857/ )

https://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/1036/ : FAILURE

Compile error at C:\Jenkins\workspace\kv_engine-windows-neo\kv_engine\engines\ep\src\kvstore/magma-kvstore/magma-kvstore.h(774): error C2039: "Mode": is not a member of "magma::Magma::SeqIterator" ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/1036/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-neo/828/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.h:774:50:
error: no type named "Mode" in "magma::Magma::SeqIterator"
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-neo/828/ )

CMake error: CMakeLists.txt:145 (MESSAGE) ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-neo/828/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/neo/878/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [145/160]: test_MB-19687_fixed...Missing stat:  ep_magma_value_separation_size from stat group 
[2023-01-17T17:03:42.744Z] Missing stat:  ep_magma_value_separation_size from stat group config
[2023-01-17T17:03:42.744Z] ../kv_engine/engines/ep/tests/ep_testsuite.cc:7880 Test failed: `stats error" (missing stats)
[2023-01-17T17:03:42.744Z] (48 ms) FAIL
</pre>
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/neo/878/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/1147/ : FAILURE

Compile error at [2023-01-17T16:27:47.054Z] ../kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.h:774:50:
error: no type named "Mode" in "magma::Magma::SeqIterator"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/1147/ )

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/neo/849/ : FAILURE

Compile error at [2023-01-17T17:05:58.770Z] ../kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.h:774:50:
error: no type named "Mode" in "magma::Magma::SeqIterator"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/neo/849/ )

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/neo/863/ : FAILURE

Compile error at [2023-01-17T16:32:16.108Z] ../kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.h:774:23:
error: ?magma::Magma::SeqIterator::Mode? has not been declared
 ( https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/neo/863/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/neo/877/ : FAILURE

Compile error at [2023-01-17T16:53:05.018Z] ../kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.h:774:50:
error: no type named "Mode" in "magma::Magma::SeqIterator"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/neo/877/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/neo/868/ : FAILURE

Compile error at [2023-01-17T17:02:50.013Z] ../kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.h:774:23:
error: ?magma::Magma::SeqIterator::Mode? has not been declared
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/neo/868/ )

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/870/ : FAILURE

Compile error at [2023-01-17T16:51:07.604Z] ../kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.h:774:50:
error: no type named "Mode" in "magma::Magma::SeqIterator"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/870/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/22249/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
